--- a/layout.jade
+++ b/layout.jade
@@ -14,4 +14,4 @@ html
 		// footer
 		include footer
 		script(type="text/javascript", src="js/image.js")
-		script(type="text/javascript", src="js/main.js")
+		script(type="text/javascript", src="js/client.js")
