--- a/src/less/main.less
+++ b/src/less/main.less
@@ -8,6 +8,10 @@
 body,html{
 	height: 100%;
 }
+progress{
+	cursor: pointer;
+	width: 200px;
+}
 .width{
 	width: 1000px;
 	min-width: 1000px;
@@ -46,12 +50,38 @@ header{
 .main-area{
 	.auto();
 	min-height: calc(~"100% - @{hh}");
+	min-width: 1000px;
 	margin-bottom: -@fh;
+}
+.handle-area{
+	float: left;
+	padding: 50px;
+	width: 200px;
+}
+.handle-ways{
+	list-style-type: none;
+}
+.handle-ways li{
+	height: 50px;
+	line-height: 50px;
+}
+.handle-ways li a{
+	cursor: pointer;
+}
+.handle-ways li a:hover{
+	text-decoration: underline;
+}
+.handle-title{
+	text-align: center;
 }
 .main-area::after{
 	content: "";
 	display: block;
 	height: @fh;
+}
+.content-wrapper{
+	margin-left: 300px;
+	padding: 50px;
 }
 // footer
 footer{
@@ -67,8 +97,4 @@ footer{
 }
 .author:hover{
 	text-decoration: underline;
-}
-canvas{
-	border: 2px solid blue;
-	margin: 0px 50px;
 }
