--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,7 @@ block content
 			+way("灰度图")(id="toGray")
 			+way("原图")(id="toOld")
 			+way("反转")(id="toInverse")
+			+way("镜像")(id="toMirror")
 			+way("加马赛克")(id="toMosaic")
 			+way("改亮度与对比度：")(id="ConBrBaseFilter")
 		div#radix-change 
