--- a/index.jade
+++ b/index.jade
@@ -11,6 +11,8 @@ block content
 			+way("反转")(id="toInverse")
 			+way("镜像")(id="toMirror")
 			+way("加马赛克")(id="toMosaic")
+			+way("高斯模糊")(id="GaosiBulr")
+			+way("素描效果")(id="toSketch")
 			+way("改亮度与对比度：")(id="ConBrBaseFilter")
 		div#radix-change 
 			label 亮&nbsp;&nbsp;度：
