change logo.png path

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -46,7 +46,7 @@ header{
 }
 .logo-area{
 	.size(@hh, @hh);
-	background: url(/images/logo.png);
+	background: url(../images/logo.png);
 	cursor: pointer;
 	float: left;
 }
