add Sepia Tone Effect

--- a/index.jade
+++ b/index.jade
@@ -11,6 +11,7 @@ block content
 			+way("反转")(id="toInverse")
 			+way("镜像")(id="toMirror")
 			+way("加马赛克")(id="toMosaic")
+			+way("怀旧效果")(id="toNostalgia")
 			+way("高斯模糊")(id="GaosiBulr")
 			+way("素描效果")(id="toSketch")
 			+way("Roberts边缘提取")(id="Roberts")
