--- a/src/less/main.less
+++ b/src/less/main.less
@@ -65,8 +65,9 @@ header{
 	float: left;
 	padding: 50px;
 	width: 200px;
-	max-height: 500px;
-	overflow: scroll;
+	height: calc(~"100% - @{hh}");
+	min-height: 500px;
+	overflow-y: scroll;
 }
 .handle-ways{
 	list-style-type: none;
