--- a/layout.jade
+++ b/layout.jade
@@ -6,6 +6,8 @@ html
 		link(rel="shortcut icon", type="image/x-icon", href="favicon.ico")
 		title LsgoImage
 	body
+		// mask
+		include mask
 		// header
 		include header
 		// main
