--- a/mask.jade
+++ b/mask.jade
@@ -7,4 +7,4 @@ div#mask
 			- for(var i = 0; i < 3; i++)
 				div.spinner-container(class="mask-container#{i + 1}")
 					+child()
-		div.layer-text 正在加载中...
+		div.layer-text wait a minute...
